--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -22,14 +22,14 @@
         data-accordion="false"
       >
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/" class="nav-link">
             <i class="nav-icon fas fa-home"></i>
             <p>Beranda</p>
           </a>
         </li>
         <li class="nav-header">Master</li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/category" class="nav-link">
             <i class="nav-icon far fa-calendar-alt"></i>
             <p>Category</p>
           </a>
