--- a/views/admin/category/view_category.ejs
+++ b/views/admin/category/view_category.ejs
@@ -1,12 +1,12 @@
 <%- include('../../partials/header') %> <%- include('../../partials/navbar') %>
 <%- include('../../partials/sidebar') %>
 <div class="content-wrapper">
-  <!-- Content Header (Page header) -->
   <section class="content-header">
     <div class="container-fluid">
+      <%- include('../../partials/message') %>
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>DataTables</h1>
+          <h1>Kategori</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
@@ -14,12 +14,8 @@
             <li class="breadcrumb-item active">Category</li>
           </ol>
         </div>
-      </div>
     </div>
-    <!-- /.container-fluid -->
   </section>
-
-  <!-- Main content -->
   <section class="content">
     <div class="container-fluid">
       <div class="row">
@@ -33,17 +29,9 @@
                 >
               </h3>
             </div>
-            <!-- /.card-header -->
             <div class="card-body"><%- include('table') %></div>
-            <!-- /.card-body -->
           </div>
         </div>
-        <!-- /.col -->
-      </div>
-      <!-- /.row -->
-    </div>
-    <!-- /.container-fluid -->
   </section>
-  <!-- /.content -->
 </div>
-<%- include('../../partials/footer') %> <%- include('../../partials/js') %>
+<%- include('../../partials/js') %> <%- include('../../partials/footer') %>
