--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -63,5 +63,15 @@
       rel="stylesheet"
       href="/adminlte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css"
     />
+    <!-- Select2 -->
+    <link
+      rel="stylesheet"
+      href="/adminlte/plugins/select2/css/select2.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/adminlte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"
+    />
+    />
   </head>
 </html>
