--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,6 +1,6 @@
 <% if (alert.message !== "") { %>
 <div
-  class="alert alert-<%= alert.status %> alert-dismissible fade show"
+  class="alert alert-<%= alert.status %> alert-dismissible fade show alert-fixed"
   role="alert"
 >
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
