--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,7 +1,5 @@
-<!-- Main Sidebar Container -->
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-  <!-- Brand Logo -->
-  <a href="index3.html" class="brand-link">
+  <a href="/" class="brand-link">
     <img
       src="/adminlte/dist/img/AdminLTELogo.png"
       alt="AdminLTE Logo"
@@ -11,9 +9,7 @@
     <span class="brand-text font-weight-light">AdminLTE 3</span>
   </a>
 
-  <!-- Sidebar -->
   <div class="sidebar">
-    <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul
         class="nav nav-pills nav-sidebar flex-column"
@@ -41,7 +37,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="pages/gallery.html" class="nav-link">
+          <a href="/voucher" class="nav-link">
             <i class="nav-icon far fa-image"></i>
             <p>Voucher</p>
           </a>
