refactor: create voucher page

--- a/views/admin/voucher/create.ejs
+++ b/views/admin/voucher/create.ejs
@@ -30,17 +30,14 @@
                 <form action="/voucher/create" method="post">
                   <div class="card-body">
                     <div class="form-group">
-                        <label>Nama Koin</label>
-                        <select class="form-control select2" style="width: 100%;" name="coinName" required>
-                        <option selected="selected">Choose...</option>
-                        <option value="Diamond">Diamond</option>
-                        <option value="Gold">Gold</option>
-                        <option value="Jewel">Jewel</option>
-                        </select>
-                  </div>
+                      <label for="name">Nama Game</label>
+                      <input type="text" name="name" class="form-control" id="name" placeholder="Masukan Nama Game" required>
+                    </div>
                     <div class="form-group">
-                      <label for="name">Jumlah Koin</label>
-                      <input type="number" name="coinQuantity" class="form-control" id="name" placeholder="Masukan Jumlah Koin" required>
+                        <label>Categori</label>
+                        <select class="form-control select2" style="width: 100%;" name="category" required >
+                        <option selected="selected">Choose...</option> 
+                      </select>
                     </div>
                     <div class="form-group">
                       <label for="name">Price</label>
